# cmdweeebs

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
src/cmdanime/: getanime.py
src/getanime.egg-info/: PKG-INFO  SOURCES.txt
