[metadata]
name = cmdanime
version = 1.0.0
author = Arinze
author_email = pentacker@gmail.com
description = A Python package to download anime from command line 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/devoply-dev/cmdanime
project_urls =
    repository = https://github.com/devoply-dev/cmdanime
classifiers =
    Environment :: Console
    Natural Language :: English
    Topic :: Home Automation
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src